added background images and contact section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Jarred Hampton</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"/>
+<!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"/> -->
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
 </head>
 
@@ -23,7 +23,9 @@
     </header>
 
     <aside class="hero-banner">
-        <h2>Crafting Innovative Solutions Through Code</h2>
+        <div>
+            <h2>Crafting Innovative Solutions Through Code</h2>
+        </div>
     </aside>
 
     <main class="page-wrapper">
@@ -40,31 +42,31 @@
         <section class="page-section" id="work">
             <h2>Work</h2>
                 <div class="flex-container">
-                    <section class="flex-item" class="surf-report">
+                    <section class="flex-item surf-report">
                         <div>
                             <h3>Surf Report</h3>
                                 <sub>MERN Stack</sub> 
                         </div>
                     </section>
-                    <section class="flex-item" class="led-wall">
+                    <section class="flex-item led-wall">
                         <div>
                             <h3>LED Wall</h3>
                                 <sub>Node/IoT</sub>
                         </div>
                     </section>
-                    <section class="flex-item" class="react-calc">
+                    <section class="flex-item react-calc">
                         <div>
                             <h3>Calculator</h3>
                                 <sub>React/JavaScript/CSS</sub>
                         </div>
                     </section>
-                    <section class="flex-item" class="pastel-puzzles">
+                    <section class="flex-item pastel-puzzles">
                         <div>
                             <h3>Puzzles</h3>
                                 <sub>MERN Stack</sub>
                         </div>
                     </section>
-                    <section class="flex-item" class="run-buddy">
+                    <section class="flex-item run-buddy">
                         <div>
                             <h3>Run-Buddy</h3>
                                 <sub>HTML/CSS</sub>
@@ -74,22 +76,18 @@
         </section>
         <section class="page-section" id="contact-me">
             <h2>Contact Me</h2>
-                <section>
+                <div class="contact">
                     <address>
-                        <ul>
-                            <a href="contact address">xxx.xxx.xxx</a>
-                            <a href="contact address">LinkedIn</a>
-                            <a href="contact address">Email</a>
-                            <a href="contact address">GitHub</a>
-                        </ul>
-                       
+                        <a href="https://www.linkedin.com/in/jarredhampton/">LinkedIn</a>
+                        <a href="jarred.c.hampton@gmail.com">Email</a>
+                        <a href="https://github.com/Jarred13D">GitHub</a>
                     </address>
-                </section>
+                </div>
         </section> 
     </main>
 
     <footer>
-        <h2>Thanks!</h2>
+        <h2>&#64J.Hampton 2024</h2>
     </footer>
 </body>
 
