--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <h2>Contact Me</h2>
                 <div class="contact">
                     <address>
-                        <a href="https://www.linkedin.com/in/jarredhampton/">LinkedIn</a>
-                        <a href="jarred.c.hampton@gmail.com">Email</a>
-                        <a href="https://github.com/Jarred13D">GitHub</a>
+                        <a href="https://www.linkedin.com/in/jarredhampton/" target="_blank">LinkedIn</a>
+                        <a href="mailto:jarred.c.hampton@gmail.com">Email</a>
+                        <a href="https://github.com/Jarred13D" target="_blank">GitHub</a>
                     </address>
                 </div>
         </section> 
